...
          child: Column(
            mainAxisAlignment: MainAxisAlignment.start,
            children: <Widget> [
              gapBox,
              gapBox,
              TextFormField(
                key: const Key('EditFriendsUsernameFormField'),
                initialValue: _input,
                textAlignVertical: TextAlignVertical.center,
                decoration: const InputDecoration(
                  fillColor: whiteOpacity15,
                  filled: true,
                  hintStyle: TextStyle(color: whiteOpacity70),
...
