...
            const SizedBox(height: 45),
            Container(
              width: _buttonWidth,
              height: _buttonHeight,
              decoration: smallRadiusRoundedBox,
              child: TextButton(
                key: const Key('WelcomeBackButton'),
                style: _buttonStyle,
                child: const AutoSizeText('Welcome Back!', maxLines: 1),
                onPressed: () {
                  Navigator.push(
                    context,
                    PageTransition(child: const SignIn(), type: PageTransitionType.rightToLeftPop, childCurrent: this)
...
